updated project for deployment

--- a/_posts/2023-07-27-post.md
+++ b/_posts/2023-07-27-post.md
@@ -1,4 +1,100 @@
 ---
 title: InvenTracker
-author: RunTimeError
+author:  
 ---
+
+# Our Vision:
+
+Providing appliance retailers an easy-to-use app to manage and view their inventory.
+
+## What is the InvenTracker?
+
+The RTE (Run-Time-Error) InvenTracker is a **comprehensive Inventory Management System** program designed to cater to the **specific needs of e-commerce businesses specializing in appliances**, including dishwashers, washers and dryer machines, and smaller appliances like microwaves.
+
+The system provides tools to **efficiently manage multiple warehouses and multiple categories of appliances**. By offering real-time tracking of **inventory quantity, location, and status**, the application **enables businesses** to make **informed decisions regarding stock management**.
+
+## Who are our targeted users
+Our user base would entail a combination of **product managers, warehouse managers, salespeople, and business managers.**
+
+**Salespeople** will only have permission to **view available inventory** and **schedule delivery dates** (as they make sales).
+
+**Warehouse Managers** will have permission to **view analytics** and **schedule the inventory arrival**, in addition to **having all the permissions of a Salesperson**.
+
+**Product Managers** will only have permission to **add new items and product categories**, and **edit existing items and categories**.
+
+**Business Managers** will have full permission to do anything they please. Only **Business Managers** will have permission to a**dd new users to the app** and **assign them roles and permissions**.
+
+## What is Our Project's Value:
+
+The RTE InvenTracker **delivers significant value** to **e-commerce businesses poised for growth and expansion**. It empowers business owners and warehouse managers to **efficiently manage inventory across multiple warehouses, ensuring optimal availability of products***. By automating manual tasks such as order processing, and stock tracking, the system **enhances operational efficiency and minimizes errors.** These features will allow the business to focus on **operational growth initiatives**.
+
+Moreover, the system will provide analytical insights, into inventory performance, stock valuation, and other key performance indicators. This data empowers businesses to make **informed decisions regarding pricing, purchasing, promotions, and product lifecycle management, driving profitability and competitiveness**.
+The scalability of the RTE InvenTracker allows **seamless management of inventory as e-commerce businesses expand and grow**. It accommodates increasing inventory volumes and supports multiple warehouse locations, ensuring **streamlined operations and enhanced supply chain efficiency.**
+
+## Our Success Criteria
+
+The success of the RTE InvenTracker will be measured based on the achievement of the following criteria:
+
+* ... **easily view, filter and sort inventory** across any warehouse based on various criteria, such as appliance type or brand name.
+
+* ... **schedule the movement of inventory between warehouses** in just a few clicks.
+
+* ... **effortlessly view available storage space at any warehouse**.
+
+* ... **seamlessly switch between warehouses**, enabling efficient management of individual inventories.
+
+* By meeting these success criteria, the RTE InvenTracker will **empower e-commerce businesses with a powerful and professional inventory management solution** to streamline their supply chain, address inefficiencies, and optimize overall performance.
+
+## Features
+
+### User Login:
+
+### Admin User Management:
+
+### Admin Warehouse and Category Modifying: 
+
+### User inventory Modifications: 
+
+### Adding New Items To Inventory:
+
+### Removing Items from Categories and Warehouses
+
+### Users can also move inventory between warehouses
+
+## Post Mortem and Retrospective):
+
+### Design Decision
+
+Implementing interfaces early in the development process was a beneficial strategic decision that allowed for more modularity and abstracion in our code organization. Interfaces also defined formal contracts, promoting collaboration among team members and enabled parallel development. This simplified testing, reduced coupling, and enhanced code flexibility for future changes. By adhering to interfaces, we achieved high level of achieve extensibility and reusability, while also provided effective documentation and facilitated efficient communication among our group members. Overall, this approach set a strong foundation for building scalable, maintainable, and agile approach to our project development this summer. 
+
+### Utilized Design Principle: 
+
+#### Façade
+
+* Services.get(Class<T>)
+
+Services.get(Class<T>) is a **façade** for all our factory methods used to create our various logic layer services.
+
+The method search for a suitable method defined within itself that returns something assignable to the requested interface, and which takes 0 parameters. It then calls this method to supply the service.
+
+The Services class can be considered as a **facade design pattern** because it provides a simplified interface for accessing various logic manager objects in the application.
+
+This simplifies the client code's interaction with the logic managers by hiding the complexity of object instantiation and configuration.The get() method uses reflection to dynamically locate and invoke the appropriate factory method for the requested manager class.
+
+This approach allowed for flexibility and extensibility, as the get method will never need to change. Simply add a new factory method to have access to a new service.
+
+#### Adapter
+
+* InventoryLogisticsManager
+
+This class acts as a simple wrapper that adapts **InventoryLogisticsDao** to **IInventoryLogisticsManager** so that the UI was not dependent on anything in the Data Access Layer. It encapsulated the lower-level data access details and provided a higher-level interface for the logic layer to interact with.
+
+## Group Members/Contributors and Development Skills Gained:
+
+* **Yong Ma:** "Android Development and Team Centered Development." 
+
+* **Han Sangil:** "I learned procedure for developing software in setting of a team and different tools such as git, gitlab and etc."
+
+* **Kalen Arendt:** "Android Development, HSQLDB, Creating SC.Script, N-tier architecture."
+
+* **Ajay Nair:** "Importantance and Benefit of Agile Based development, software development cycle, static website development, various levels of testing, and version control."
