updated website readme write up

--- a/_posts/2023-07-27-post.md
+++ b/_posts/2023-07-27-post.md
@@ -22,14 +22,22 @@ Our user base would entail a combination of **product managers, warehouse manage
 
 **Product Managers** will only have permission to **add new items and product categories**, and **edit existing items and categories**.
 
-**Business Managers** will have full permission to do anything they please. Only **Business Managers** will have permission to a**dd new users to the app** and **assign them roles and permissions**.
+**Business Managers** will have full permission to do anything they please. Only **Business Managers** will have permission to **add new users to the app** and **assign them roles and permissions**.
 
 ## What is Our Project's Value:
 
-The RTE InvenTracker **delivers significant value** to **e-commerce businesses poised for growth and expansion**. It empowers business owners and warehouse managers to **efficiently manage inventory across multiple warehouses, ensuring optimal availability of products***. By automating manual tasks such as order processing, and stock tracking, the system **enhances operational efficiency and minimizes errors.** These features will allow the business to focus on **operational growth initiatives**.
+### User Login:
+The application provides a secure login system that allows users to access their accounts with designated roles. Two main roles exist: "admin" and "general user." New users have the flexibility to register for the application and choose their role accordingly.
 
-Moreover, the system will provide analytical insights, into inventory performance, stock valuation, and other key performance indicators. This data empowers businesses to make **informed decisions regarding pricing, purchasing, promotions, and product lifecycle management, driving profitability and competitiveness**.
-The scalability of the RTE InvenTracker allows **seamless management of inventory as e-commerce businesses expand and grow**. It accommodates increasing inventory volumes and supports multiple warehouse locations, ensuring **streamlined operations and enhanced supply chain efficiency.**
+### Admin Privileges:
+Administrators have extensive control over the inventory and user management aspects of the application. They possess the capability to modify existing warehouses and categories, ensuring that the inventory organization remains up-to-date and relevant. Additionally, admins can add new users to the system and specify their roles as either general users or fellow administrators. Admins can also add new product model information, which helps in maintaining a comprehensive and accurate inventory catalog.
+
+### General User Capabilities:
+General users are granted limited but essential privileges for inventory management. They have the ability to add new inventory items to the system and remove existing ones as necessary, ensuring that the inventory remains updated and reflective of current stock levels.
+
+### General users can also view the inventories within different warehouses and categories, providing them with a clear overview of available stock and its distribution.
+
+Another valuable feature available to general users is the ability to move inventory items between warehouses. This feature ensures efficient stock transfers and distribution, allowing for optimized inventory utilization and reducing the likelihood of stockouts or excess stock in specific locations.
 
 ## Our Success Criteria
 
@@ -61,7 +69,7 @@ The success of the RTE InvenTracker will be measured based on the achievement of
 
 ### Users can also move inventory between warehouses
 
-## Post Mortem and Retrospective):
+## Post Mortem and Retrospective:
 
 ### Design Decision
 
