updated project for deployment

--- a/_posts/2023-07-27-post.md
+++ b/_posts/2023-07-27-post.md
@@ -24,7 +24,7 @@ Our user base would entail a combination of **product managers, warehouse manage
 
 **Business Managers** will have full permission to do anything they please. Only **Business Managers** will have permission to **add new users to the app** and **assign them roles and permissions**.
 
-## What is Our Project's Value:
+## Feature Overview:
 
 ### User Login:
 The application provides a secure login system that allows users to access their accounts with designated roles. Two main roles exist: "admin" and "general user." New users have the flexibility to register for the application and choose their role accordingly.
@@ -76,6 +76,8 @@ The success of the RTE InvenTracker will be measured based on the achievement of
 Implementing interfaces early in the development process was a beneficial strategic decision that allowed for more modularity and abstracion in our code organization. Interfaces also defined formal contracts, promoting collaboration among team members and enabled parallel development. This simplified testing, reduced coupling, and enhanced code flexibility for future changes. By adhering to interfaces, we achieved high level of achieve extensibility and reusability, while also provided effective documentation and facilitated efficient communication among our group members. Overall, this approach set a strong foundation for building scalable, maintainable, and agile approach to our project development this summer. 
 
 ### Utilized Design Principle: 
+
+For Example, 
 
 #### Façade
 
