finalized content for website

--- a/_posts/2023-07-27-post.md
+++ b/_posts/2023-07-27-post.md
@@ -89,8 +89,8 @@ We recognized the importance of thorough testing for each feature after its deve
 **Understanding Exact Requirements for Proposed Features:**
 The inventory management system had multiple proposed features, and ensuring a clear understanding of the exact requirements for each feature was crucial. Miscommunication or vague specifications could lead to discrepancies between our implementation and the stakeholders' expectations. To address this, we conducted frequent meetings with group members, clarified requirements through documentation and mockups, and sought feedback at every milestone with each other to that each feature was on the right track for development.
 
-
 **Improvements after Iteration 2:**
+
 Since earlier iterations, we have identified significant challenges in our approach. However, in the later stages of the project, we managed to address most issues, and only a few challenges arose during the retrospective after iteration 2. The two main challenges were related to work distribution and starting feature development. Fortunately, we found effective solutions to overcome these obstacles.
 
 To tackle the work distribution challenge, we decided to leverage past iteration contributions as a basis for assigning tasks in the current iteration. By analyzing each team member's past contributions and strengths, we could better allocate tasks according to individual expertise. For instance, we assigned one person to handle generating the website and consolidating final thoughts and ideas for our project.
@@ -103,6 +103,8 @@ Overall, through continuous improvement and a collaborative effort, we were able
 
 #### Design Decision
 
+
+#### Implementing Inferfaces Early On
 Implementing interfaces early in the development process was a beneficial strategic decision that allowed for more modularity and abstracion in our code organization. Interfaces also defined formal contracts, promoting collaboration among team members and enabled parallel development. This simplified testing, reduced coupling, and enhanced code flexibility for future changes. By adhering to interfaces, we achieved high level of achieve extensibility and reusability, while also provided effective documentation and facilitated efficient communication among our group members. Overall, this approach set a strong foundation for building scalable, maintainable, and agile approach to our project development this summer. 
 
 #### Utilized Design Principle: 
