finalized content for website

--- a/_posts/2023-07-27-post.md
+++ b/_posts/2023-07-27-post.md
@@ -64,10 +64,13 @@ The success of the RTE InvenTracker will be measured based on the achievement of
 ### User inventory Modifications: 
 
 ### Adding New Items To Inventory:
+[![Add Inventory]((https://www.youtube.com/watch?v=oMM1rHGjGME&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=2&ab_channel=AjayNair)]
 
 ### Removing Items from Categories and Warehouses
+[![Remove Inventory](https://www.youtube.com/watch?v=SvRoHQltSzE&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&ab_channel=AjayNair)]
 
 ### Users can also move inventory between warehouses
+[![Move Inventory between warehouses](https://www.youtube.com/shorts/AiGxtb7rp3U)]
 
 ## Post Mortem and Retrospective:
 
