finalized content for website

--- a/_posts/2023-07-27-post.md
+++ b/_posts/2023-07-27-post.md
@@ -55,13 +55,15 @@ The success of the RTE InvenTracker will be measured based on the achievement of
 
 ## Features
 
-### User Login:
+[Add Category](https://www.youtube.com/watch?v=zk9qrMWnNsY&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=3&ab_channel=AjayNair)
 
-### Admin User Management:
+[Add and Update Warehouse](https://www.youtube.com/watch?v=bG1rkHwNZsY&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=4&ab_channel=AjayNair)
 
-### Admin Warehouse and Category Modifying: 
+[Search and Filter Search Results](https://www.youtube.com/watch?v=bkrCRBhXGTU&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=5&ab_channel=AjayNair)
 
-### User inventory Modifications: 
+[Product Search](https://www.youtube.com/watch?v=GOZMVds8qLo&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=6&ab_channel=AjayNair)
+
+[Sort By](https://www.youtube.com/watch?v=xmR4yoYktXg&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=7&ab_channel=AjayNair)
 
 [Add Inventory](https://www.youtube.com/watch?v=oMM1rHGjGME&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=2&ab_channel=AjayNair)
 
