finalized content for website

--- a/_posts/2023-07-27-post.md
+++ b/_posts/2023-07-27-post.md
@@ -30,10 +30,10 @@ Our user base would entail a combination of **product managers, warehouse manage
 The application provides a secure login system that allows users to access their accounts with designated roles. Two main roles exist: "admin" and "general user." New users have the flexibility to register for the application and choose their role accordingly.
 
 ### Admin Privileges:
-Administrators have extensive control over the inventory and user management aspects of the application. They possess the capability to modify existing warehouses and categories, ensuring that the inventory organization remains up-to-date and relevant. Additionally, admins can add new users to the system and specify their roles as either general users or fellow administrators. Admins can also add new product model information, which helps in maintaining a comprehensive and accurate inventory catalog.
+Administrators have extensive control over the inventory and user management aspects of the application. They possess the capability to modify existing warehouses and categories, ensuring that the inventory organization remains up-to-date and relevant. Additionally, admins can add new users to the system and specify their roles as either general users or fellow administrators. Admins can also add new product model information, which helps in maintaining a comprehensive and accurate inventory catalog. Users are also able to search for products using key words or based on criteria such as warehouse or category of the product.
 
 ### General User Capabilities:
-General users are granted limited but essential privileges for inventory management. They have the ability to add new inventory items to the system and remove existing ones as necessary, ensuring that the inventory remains updated and reflective of current stock levels.
+General users are granted limited but essential privileges for inventory management. They have the ability to add new inventory items to the system and remove existing ones as necessary, ensuring that the inventory remains updated and reflective of current stock levels. Users are also able to search for products using key words or based on criteria such as warehouse or category of the product.
 
 ### General users can also view the inventories within different warehouses and categories, providing them with a clear overview of available stock and its distribution.
 
