separated single post into multiple

--- a/_posts/2023-01-01-post.md
+++ b/_posts/2023-01-01-post.md
@@ -14,15 +14,30 @@ The RTE (Run-Time-Error) InvenTracker is a **comprehensive Inventory Management 
 The system provides tools to **efficiently manage multiple warehouses and multiple categories of appliances**. By offering real-time tracking of **inventory quantity, location, and status**, the application **enables businesses** to make **informed decisions regarding stock management**.
 
 ## Who are our targeted users
+
 Our user base would entail a combination of **product managers, warehouse managers, salespeople, and business managers.**
 
-**Salespeople** will only have permission to **view available inventory** and **schedule delivery dates** (as they make sales).
+### **Salespeople**
 
-**Warehouse Managers** will have permission to **view analytics** and **schedule the inventory arrival**, in addition to **having all the permissions of a Salesperson**.
+- View available inventory
+- Move inventory
+- Remove inventory (when they make a sale.)
 
-**Product Managers** will only have permission to **add new items and product categories**, and **edit existing items and categories**.
+### **Warehouse Managers**
 
-**Business Managers** will have full permission to do anything they please. Only **Business Managers** will have permission to **add new users to the app** and **assign them roles and permissions**.
+- Import inventory into warehouses
+- Add new warehouses
+- View and edit warehouse capacity
+- View space in use at all the warehouses.
+
+### **Product Managers**
+
+- Add new categories
+- Add new product models.
+
+### **Business Managers**
+
+- Add new users
 
 ## Feature Overview:
 
