added user registration video to Gallery and renamed videos  to Feature Gallery

--- a/_posts/2023-06-01-features.md
+++ b/_posts/2023-06-01-features.md
@@ -21,7 +21,9 @@ General users are granted limited but essential privileges for inventory managem
 
 Another valuable feature available to general users is the ability to move inventory items between warehouses. This feature ensures efficient stock transfers and distribution, allowing for optimized inventory utilization and reducing the likelihood of stockouts or excess stock in specific locations.
 
-## Videos
+## Feature Gallery
+
+[User Features: Registration, Login, User Roles, Change Password](https://www.youtube.com/watch?v=fB-HS-x6WdU&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=8&ab_channel=AjayNair)
 
 [Add Category](https://www.youtube.com/watch?v=zk9qrMWnNsY&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=3&ab_channel=AjayNair)
 
