split big post into multiple.

--- a/_posts/2023-06-01-features.md
+++ b/_posts/2023-06-01-features.md
@@ -2,39 +2,57 @@
 title: Features
 author:  
 ---
+## **Videos**
 
-## Overview
+- [Add Category](https://www.youtube.com/watch?v=zk9qrMWnNsY&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=3&ab_channel=AjayNair)
+- [Add and Update Warehouse](https://www.youtube.com/watch?v=bG1rkHwNZsY&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=4&ab_channel=AjayNair)
+- [Search and Filter Search Results](https://www.youtube.com/watch?v=bkrCRBhXGTU&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=5&ab_channel=AjayNair)
+- [Product Search](https://www.youtube.com/watch?v=GOZMVds8qLo&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=6&ab_channel=AjayNair)
+- [Sort By](https://www.youtube.com/watch?v=xmR4yoYktXg&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=7&ab_channel=AjayNair)
+- [Add Inventory](https://www.youtube.com/watch?v=oMM1rHGjGME&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=2&ab_channel=AjayNair)
+- [Remove Inventory](https://www.youtube.com/watch?v=SvRoHQltSzE&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&ab_channel=AjayNair)
+- [Move Inventory between warehouses](https://www.youtube.com/shorts/AiGxtb7rp3U)
 
-### User Login
+## **User Login**
 
-The application provides a secure login system that allows users to access their accounts with designated roles. Two main roles exist: "admin" and "general user." New users have the flexibility to register for the application and choose their role accordingly.
+- The application provides a secure login system that allows users to access their accounts with designated roles.
+- Two main roles exist: **`admin`** and **`general user`**.
+- New users have the flexibility to register for the application and choose their role accordingly.
 
-### Admin Privileges
+## **Admin Privileges**
 
-Administrators have extensive control over the inventory and user management aspects of the application. They possess the capability to modify existing warehouses and categories, ensuring that the inventory organization remains up-to-date and relevant. Additionally, admins can add new users to the system and specify their roles as either general users or fellow administrators. Admins can also add new product model information, which helps in maintaining a comprehensive and accurate inventory catalog. Users are also able to search for products using key words or based on criteria such as warehouse or category of the product.
+- Add new Warehouses
+- Add new Categories
+- Add new Products
+- Add new Users
 
-### General User Capabilities
+## **General User Capabilities**
 
-General users are granted limited but essential privileges for inventory management. They have the ability to add new inventory items to the system and remove existing ones as necessary, ensuring that the inventory remains updated and reflective of current stock levels. Users are also able to search for products using key words or based on criteria such as warehouse or category of the product.
+### **Inventory**
 
-### General users can also view the inventories within different warehouses and categories, providing them with a clear overview of available stock and its distribution
+- Import Inventory
+- Transport Inventory
+- Export Inventory
+- View Inventory by Product Model
 
-Another valuable feature available to general users is the ability to move inventory items between warehouses. This feature ensures efficient stock transfers and distribution, allowing for optimized inventory utilization and reducing the likelihood of stockouts or excess stock in specific locations.
+### **Search**
 
-## Videos
+- Perform a Product Search for a specific Product Model Id
+- Perform an Advanced Search by Category, Warehouse, Price and Availability.
 
-[Add Category](https://www.youtube.com/watch?v=zk9qrMWnNsY&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=3&ab_channel=AjayNair)
+### **Warehouses**
 
-[Add and Update Warehouse](https://www.youtube.com/watch?v=bG1rkHwNZsY&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=4&ab_channel=AjayNair)
+- View Warehouses
+- View Capacity and Space In Use
 
-[Search and Filter Search Results](https://www.youtube.com/watch?v=bkrCRBhXGTU&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=5&ab_channel=AjayNair)
+### **Categories**
 
-[Product Search](https://www.youtube.com/watch?v=GOZMVds8qLo&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=6&ab_channel=AjayNair)
+- View Category Names
+- View Storage Size
 
-[Sort By](https://www.youtube.com/watch?v=xmR4yoYktXg&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=7&ab_channel=AjayNair)
+### **Account**
 
-[Add Inventory](https://www.youtube.com/watch?v=oMM1rHGjGME&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&index=2&ab_channel=AjayNair)
-
-[Remove Inventory](https://www.youtube.com/watch?v=SvRoHQltSzE&list=PLOMKXcM-anvm3COOF--KmQfIzFJySkNM9&ab_channel=AjayNair)
-
-[Move Inventory between warehouses](https://www.youtube.com/shorts/AiGxtb7rp3U)
+- Register
+- Login
+- Change Password
+- Logout
